# indy-tails-server

./: .gitignore  COMPLIANCE.yaml  README.md  index.yaml  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py
.github/: ct.yaml  dependabot.yml
.github/actions/chart_releaser/: cr.yaml
.github/workflows/: chart_release.yaml  docker_build.yml  lint-and-test.yaml  publish.yaml
chart/: .helmignore  Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  deploy.yaml  hpa.yaml  ingress.yaml  np.yaml  pvc.yaml  svc.yaml
charts/tails-server/: Chart.yaml  README.md  values.yaml
charts/tails-server/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  pdb.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
docker/: Dockerfile  Dockerfile.indy-vdr-proxy  Dockerfile.tails-server  Dockerfile.test  docker-compose.yml  manage  ngrok.yml  sample.env
logging/: config.yml  jsonLog.py
tails_server/: __init__.py  args.py  health.py  ledger.py  ledger_provider.py  loadlogger.py  logging.py  vdrproxy.py  version.py  web.py
tails_server/config/: default_logging_config.ini  defaults.py  jsonLog.py  logging-config.yml
tails_server/ledger/: BaseLedger.py  centralized.py  indy.py
test/: __init__.py  integration.py
