[project]
name = "tails_server"
version = "1.2.1"
description = "Tails Server"
authors = [ { name = "Government of British Columbia", email = "DItrust@gov.bc.ca" } ]
license = { text = "Apache-2.0"}
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
  "aiohttp==3.12.15",
  "base58~=2.1.1",
  # temporary to fix transitive dependency issues
  "multidict<7.0.0",
  "yarl==1.22.0",

  # indy_vdr
  # Error loading library: indy_vdr specified version because it occurs when installing as pip3 install indy-vdr.
  "indy_vdr==0.4.2",
  "pyyaml (>=6.0.2,<7.0.0)"
]

[project.optional-dependencies]
# pip install -e .[dev]
dev = [
  "rich~=13.9.4",
  "pynacl~=1.6.0",
  "aiofiles~=23.2.1",

  "anoncreds==0.2.0",

  "isort~=5.13.2",
  "black~=24.10.0"
]

[project.urls]
Homepage = "https://github.com/bcgov/indy-tails-server"

[tool.pyright]
pythonVersion = "3.12"

[tool.setuptools]
packages = ["tails_server", "tails_server.config"]
include-package-data = true

[tool.setuptools.package-data]
"tails_server.config" = ["default_logging_config.ini"]

[project.scripts]
tails-server = "tails_server.__init__:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
